--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- PERMISO ACCESO A INTERNET -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- PERMISO ACCESO A ESTADO DE LA CONEXION A INTERNET -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +17,9 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity5"
+            android:exported="false" />
+        <activity
+            android:name=".SpinnerRegionComuna"
             android:exported="false" />
         <activity
             android:name=".MainActivity4"
